2003-01-31  Mark Page  <mpagenva@aol.com>

	* nsd/conn.c: 
	* nsd/connio.c:
	* nsd/encoding.c:
	* nsd/form.c:
	* nsd/nsconf.c:
	* nsd/nsd.h:
	* nsd/queue.c:
	* nsd/return.c:
	* nsd/tclcmds.c:
	* nsd/tclresp.c:
	* nsd/urlencode.c:
	* include/ns.h: added in I18N capabilities derived from the OACS
	I18N design.  This set of changes is just those which are
	supported within the nsd C-code.
	* sample-config.tcl: Add text for I18N specific config.



2003-01-28  Nathan Folkman <shmooved@aol.com>

        * nsd/server.c:
        * tcl/fastpath.tcl: (bug fix) Tcl code was updated to reflect a
        a change made earlier to server.c, in which all fast path related
        configuration was moved from ns/server/<server> to
        ns/server/<server>/fastpath. This change will require you to
        update your configuration file to reflect the new configuration
        path for any fast path options.
        *** INCOMPATIBILITY ***

2003-01-28  Nathan Folkman <shmooved@aol.com>

        * nsd/init.tcl: (bug fix) Updated ns_eval command to mark Tcl interp for
        deletion in the case of a TCL_ERROR only. Updated ns_eval to properly
        handle an arbitrarly long number of args. SF bug 675506.

2003-01-24  Elizabeth Thomas <eathomas93@aol.com>

	* include/Makefile.global.in:
        * README: Added $(PURIFY) variable back from 3.4 to facilitate 
        easy purify compile. 

        * configure: Made gcc the default value for $CC instead of cc.

2003-01-23  Elizabeth Thomas <eathomas93@aol.com>

	* Tagged first 4.0 beta: aolserver_v4_r0_beta_1

2003-01-19  Nathan Folkman <shmooved@aol.com>

        * nscp/nscp.c: Cleaned up log messages to be more consistent 
        with other server messages. Moved user name from thread name into
        log notice. Control port logging now disabled by default. Added
        more detailed configuration instructions to sample-config.tcl.

2003-01-18  Jim Davidson <jgdavidson@aol.com>

	* nsd/auth.c:
	* nsd/conn.c:
	* nsd/form.c: