@@ -1,3 +1,9 @@
+2003-02-01  Nathan Folkman <shmooved@aol.com>
+
+        * tcl/stats.tcl: Consolidated web based stats interface into
+        a single Tcl file.
+        * sample-config.tcl: Added web stats configuration.
+
 2003-01-31  Mark Page  <mpagenva@aol.com>
 
 	* nsd/conn.c: 
@@ -15,8 +21,6 @@
 	I18N design.  This set of changes is just those which are
 	supported within the nsd C-code.
 	* sample-config.tcl: Add text for I18N specific config.
-
-
 
 2003-01-28  Nathan Folkman <shmooved@aol.com>
 
